# werkzeug

./: README.md
case/: werkzeug.scad  werkzeug_v2.scad  werkzeug_v3.scad
firmware/: dirtyJtag.uf2  dirtyJtag_alt.uf2  dirtyJtag_orig.uf2  micropython.uf2  musli.uf2
firmware/atio/: README.md
firmware/test_gpio/: CMakeLists.txt  test_gpio.c
firmware/test_usb_host/: test_usb_host.c
firmware/test_usb_host/pico-pio-usb/: pio_usb_configuration.h
